--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Welcome to <span>CLSN Therapy </span> Service</h2>
 
-                <a href="questionnaire.html" class="btn-get-started animate__animated animate__fadeInUp" target="_blank">Take Our Questionnaire</a>
+                <a href="questionnaire.html" class="btn-get-started animate__animated animate__fadeInUp" target="_blank">Get Started</a>
               </div>
             </div>
           </div>
@@ -104,7 +104,7 @@
               <div class="carousel-content">
                 <h2 class="animate__animated fanimate__adeInDown">Welcome to <span>CLSN Therapy </span> Service</h2>
 
-                <a href="" class="btn-get-started animate__animated animate__fadeInUp">Take Our Questionnaire</a>
+                <a href="" class="btn-get-started animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
           </div>
